// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyRecipeList MyRecipesList Test 1`] = `
<View>
  <div
    icon="all"
    title="All Recipes"
  />
  <div
    icon="heart"
    title="Favorites"
  />
  <View
    style={
      Array [
        Object {
          "marginBottom": 12,
          "marginLeft": 12,
          "marginRight": 12,
          "marginTop": 12,
        },
      ]
    }
  />
  <div
    cookbook={
      Object {
        "id": "1",
        "name": "cookbook-1",
        "owner": Object {
          "id": "1",
          "name": "me",
        },
        "privacy": false,
        "recipes": Array [],
        "thumbnail": Object {
          "id": "1",
          "url": "cookbook-thumbnail-url",
        },
      }
    }
  />
  <div
    cookbook={
      Object {
        "id": "2",
        "name": "cookbook-2",
        "owner": Object {
          "id": "2",
          "name": "you",
        },
        "privacy": false,
        "recipes": Array [],
        "thumbnail": Object {
          "id": "2",
          "url": "cookbook-thumbnail-url-2",
        },
      }
    }
  />
</View>
`;

exports[`MyRecipesList Test 1`] = `
<View>
  <div
    icon="all"
    title="All Recipes"
  />
  <div
    icon="heart"
    title="Favorites"
  />
  <View
    style={
      Array [
        Object {
          "marginBottom": 12,
          "marginLeft": 12,
          "marginRight": 12,
          "marginTop": 12,
        },
      ]
    }
  />
  <div
    cookbook={
      Object {
        "cookbook": "1",
        "id": "1",
      }
    }
  />
  <div
    cookbook={
      Object {
        "cookbook": "2",
        "id": "2",
      }
    }
  />
</View>
`;
